--- a/app/app.yaml
+++ b/app/app.yaml
@@ -4,49 +4,15 @@ runtime: python27
 api_version: 1
 threadsafe: yes
 
-handlers:       # static then dynamic
+handlers:       
 
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
-
-- url: /js
-  static_dir: static/js
-
-- url: /img
-  static_dir: static/img
+- url: /.*
+  script: project.app
 
 - url: /css
-  static_dir: static/bootstrap/css
+  static_dir: static
 
-- url: /fonts
-  static_dir: static/fonts
-
-- url: /partials
-  static_dir: static/partials
-
-- url: /
-  static_files: templates/index.html
-  upload: templates/index\.html
-  secure: always
-
-- url: /_ah/spi/.*
-  script: conference.api
-  secure: always
-
-- url: /crons/set_announcement
-  script: main.app
-  login: admin
- 
-- url: /tasks/send_confirmation_email
-  script: main.app
-  login: admin
-   
 libraries:
 
-- name: endpoints
-  version: latest
-
-# pycrypto library used for OAuth2 (req'd for authenticated APIs)
-- name: pycrypto
+- name: jinja2
   version: latest
