--- a/app/app.yaml
+++ b/app/app.yaml
@@ -6,11 +6,13 @@ threadsafe: yes
 
 handlers:       
 
+
+- url: /static
+  static_dir: static
+
 - url: /.*
   script: project.app
 
-- url: /css
-  static_dir: static
 
 libraries:
 
