--- a/app/app.yaml
+++ b/app/app.yaml
@@ -10,9 +10,14 @@ handlers:
 - url: /static
   static_dir: static
 
+- url: /blog/static
+  static_dir: static
+
+- url: /blog/(.*)
+  static_dir: project.app
+
 - url: /.*
   script: project.app
-
 
 libraries:
 
